# i8080-emulator

./: .gitignore  CMakeLists.txt  Makefile  README.rst  clang-format.sh  i8080-emulator.c  i8080.c  i8080.h  space-invaders.c  spaceinvaders.c
misc/: makearithcases.c  makemovcases.c  makeparitytable.c
